--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 
 \input{tex/preamble}
 
-\includeonly{tex/unfolding}
+\includeonly{tex/theory}
 
 \addbibresource{bib/experiment.bib}
 \addbibresource{bib/simulation.bib}
@@ -14,6 +14,7 @@
 \addbibresource{bib/selection.bib}
 \addbibresource{bib/reconstruction.bib}
 \addbibresource{bib/unfolding.bib}
+\addbibresource{bib/theory.bib}
  
 \begin{document} 
 
